# log4cpp-ios-android

./: CMakeLists.txt  README.org  aclocal.m4  android.toolchain.cmake  android_build.sh  config.status  configure  ios_build.sh  libtool  log4cpp-config
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
log4cpp/include/log4cpp/: RemoteSyslogAppender.hh  config-MinGW32.h  config.h
src/.deps/: AbortAppender.Plo  Appender.Plo  AppenderSkeleton.Plo  AppendersFactory.Plo  BasicConfigurator.Plo  BasicLayout.Plo  BufferingAppender.Plo  Category.Plo  CategoryStream.Plo  Configurator.Plo  DailyRollingFileAppender.Plo  DummyThreads.Plo  FactoryParams.Plo  FileAppender.Plo  Filter.Plo  FixedContextCategory.Plo  HierarchyMaintainer.Plo  IdsaAppender.Plo  LayoutAppender.Plo  LayoutsFactory.Plo  LevelEvaluator.Plo  Localtime.Plo  LoggingEvent.Plo  MSThreads.Plo  NDC.Plo  OmniThreads.Plo  OstreamAppender.Plo  PThreads.Plo  PassThroughLayout.Plo  PatternLayout.Plo  PortabilityImpl.Plo  Priority.Plo  Properties.Plo  PropertyConfigurator.Plo  PropertyConfiguratorImpl.Plo  RemoteSyslogAppender.Plo  RollingFileAppender.Plo  SimpleConfigurator.Plo  SimpleLayout.Plo  StringQueueAppender.Plo  (+4 more)
src/.libs/: liblog4cpp.5.dylib  liblog4cpp.dylib  liblog4cpp.lai
tests/: testbench  testmain
tests/.deps/: Clock.Po  testbench.Po  testmain.Po
tests/.libs/: testbench  testmain
